# Kata-BowlingGame

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  QuickRetrospective.md  README.md  docker-compose.yml  pull-push.sh  watch.sh
.devcontainer/cpp-container/: Dockerfile  devcontainer.json
.devcontainer/csharp-container/: Dockerfile  devcontainer.json
.devcontainer/elixir-container/: devcontainer.json
.devcontainer/go-container/: Dockerfile  devcontainer.json
.devcontainer/haskell-container/: Dockerfile  devcontainer.json
.devcontainer/java-container/: Dockerfile  devcontainer.json
.devcontainer/ocaml-container/: Dockerfile  devcontainer.json
.devcontainer/php-container/: Dockerfile  devcontainer.json
.devcontainer/python-container/: Dockerfile  devcontainer.json
.devcontainer/rust-container/: Dockerfile  devcontainer.json
.devcontainer/typescript-container/: Dockerfile  devcontainer.json
.github/: dependabot-disabled.yml  dependabot.yml
.github/workflows/: cargo.yml  cmake.yml  composer.yml  contributors.yml  dotnet.yml  fork_sync.yml  go.yml  gradle.yml  markdown-link-check-config.json  markdown-link-check.yml  maven.yml  mix.yml  npm.yml  pytest.yml  stack.yml
cpp/: .gitattributes  .gitignore  CMakeLists.txt  GETTING_STARTED.md  GETTING_STARTED_CPP.md  GETTING_STARTED_TCR.md  cpp_easy_setup.bat  cpp_easy_setup.sh  ctestw  tcr.sh  tcrLoop.sh  tcrw
cpp/.tcr/toolchain/: cmake-kata.yml  cmake.yml
cpp/cmake/: .gitattributes  FindGoogleTest.cmake  cmake-wrapper.sh  set-options.sh  version.txt
cpp/include/kata/bowling_game/: BowlingGame.hpp  config.hpp
cpp/include/production/games/bowling/: BowlingGame.hpp  config.hpp
cpp/scripts/: buildIt.sh  commit.sh  revert.sh  test.sh
cpp/src/kata/bowling_game/: BowlingGame.cpp
cpp/src/production/games/bowling/: BowlingGame.cpp
cpp/test/: BowlingGameTest.cpp
csharp/: .gitignore  GETTING_STARTED.md  Kata-BowlingGame.sln
csharp/.tcr/language/: csharp.yml
csharp/.tcr/toolchain/: dotnet.yml
csharp/src/Murex/Kata/BowlingGame/: BowlingGame.cs  BowlingGame.csproj
csharp/tests/Murex/Kata/BowlingGame/: BowlingGame.Tests.csproj  BowlingGameTest.cs
doc/: MobProgramming.md  PreparedKata.md  RandoriInPairs.md  RandoriKata.md
doc/coaching/: GeneralCoachingGuide.md
elixir/: .gitignore  GETTING_STARTED.md  mix.exs  tcrw
elixir/.tcr/: config.yml
elixir/.tcr/language/: elixir.yml
elixir/.tcr/toolchain/: mix.yml
elixir/lib/: bowling_game.ex
elixir/test/: bowling_game_test.exs
go/: .gitignore  GETTING_STARTED.md  go.mod  go.sum
go/.tcr/language/: go.yml
go/.tcr/toolchain/: go-tools.yml
go/src/bowling_game/: bowling_game.go  bowling_game_test.go
haskell/: .gitignore  GETTING_STARTED.md  GETTING_STARTED_IN_DEV_CONTAINER.md  bowling-game.cabal  leap.cabal  package.yaml
haskell/.tcr/: config.yml
haskell/.tcr/toolchain/: stack.yml
haskell/src/: BowlingGame.hs  LeapYear.hs
haskell/test/: Tests.hs
java/: .gitattributes  .gitignore  GETTING_STARTED.md  GETTING_STARTED_JAVA.md  GETTING_STARTED_TCR.md  build.gradle  pom.xml  revertAll.sh  settings.gradle  tcr.sh  tcrLoop.sh  tcrw
java/.tcr/language/: java.yml
java/.tcr/toolchain/: gradle-wrapper.yml  gradle.yml  maven-wrapper.yml  maven.yml
java/scripts/: buildIt.sh  commit.sh  revert.sh
java/src/main/java/: BowlingGame.java
java/src/main/java/com/murex/: BowlingGame.java  FizzBuzz.java  SystemTerminal.java  Terminal.java
java/src/test/java/: BowlingGameTest.java
java/src/test/java/com/murex/: BowlingGameTest.java  FakeTerminal.java  FizzBuzzTest.java  ProxyTerminal.java
ocaml/: .profile  Makefile  setup.sh
php/: .gitignore  GETTING_STARTED.md  composer.json  php-check.sh  phpunit.xml.dist  tcrw
php/.tcr/: config.yml
php/.tcr/toolchain/: phpunit.yml
php/src/: BowlingGame.php
php/tests/: BowlingGameTest.php
python/: .gitignore  GETTING_STARTED.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_python_venv.sh  start_python_venv.sh  tcrw
python/.tcr/: config.yml
python/.tcr/language/: python.yml
python/.tcr/toolchain/: pytest-collect-only.yml  pytest-hardcore.yml  pytest-no-assert.yml
python/src/bowling_game/: bowling_game.py
python/tests/: bowling_game_test.py  test_bowling_game.py
rust/: .gitignore  Cargo.toml  GETTING_STARTED.md
rust/.tcr/: config.yml
rust/src/: lib.rs
rust/tests/: lib_test.rs
tcr/: .gitattributes  .gitignore  TCR.md  revertAll.sh  tcr.sh  version.txt
tcr/tcr_go/: .gitignore  tcr_go.md  tcr_go.sh  version.txt
tcr/tcr_shell/: tcr_shell.md  tcr_shell.sh
tcr/tcr_shell/languages/: cpp  java
tcr/tcr_shell/toolchains/: cmake  gradle  maven
typescript/: .gitignore  GETTING_STARTED.md  jest.config.js  package.json
typescript/.tcr/: config.yml
typescript/.tcr/language/: typescript.yml
typescript/.tcr/toolchain/: yarn.yml
typescript/src/: BowlingGame.ts
typescript/test/: BowlingGame.spec.ts
workflows/: maven.yml
